--- a/main.html
+++ b/main.html
@@ -8,6 +8,46 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h2>List of medias</h2>
+
+<table>
+  <thead> <tr>
+      <th>Roll Number</th>
+      <th>Name</th>
+    </tr>
+  </thead>
+  <tbody> <tr>
+      <td>1</td>
+      <td>Student 1</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>Student 2</td>
+    </tr>
+    <tr>   
+
+      <td>3</td>
+      <td>Student 3</td>
+    </tr>
+  </tbody>
+</table>
+
+<ol>
+  <li>
+    Image: <img src="https://picsum.photos/id/123/200/300" alt="Random image from Pexels">
+  </li>
+  <li>
+    Video: <video controls>
+      <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+    </video>
+  </li>
+  <li>
+    Audio:   
+ <audio controls>
+      <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
+    </audio>
+  </li>
+</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
