--- a/main.html
+++ b/main.html
@@ -8,46 +8,51 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h2>List of medias</h2>
+	  <table>
+        <thead>
+            <tr>
+                <th>Roll Number</th>
+                <th>Name</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>101</td>
+                <td>Alice</td>
+            </tr>
+            <tr>
+                <td>102</td>
+                <td>Bob</td>
+            </tr>
+            <tr>
+                <td>103</td>
+                <td>Charlie</td>
+            </tr>
+        </tbody>
+    </table>
 
-<table>
-  <thead> <tr>
-      <th>Roll Number</th>
-      <th>Name</th>
-    </tr>
-  </thead>
-  <tbody> <tr>
-      <td>1</td>
-      <td>Student 1</td>
-    </tr>
-    <tr>
-      <td>2</td>
-      <td>Student 2</td>
-    </tr>
-    <tr>   
+    <!-- Heading -->
+    <h2>List of medias</h2>
 
-      <td>3</td>
-      <td>Student 3</td>
-    </tr>
-  </tbody>
-</table>
+    <!-- Ordered List with Media Items -->
+    <ol>
+        <li>
+            <img src="https://picsum.photos/id/123/200/300" alt="Sample Image">
+        </li>
+        <li>
+            <video controls>
+                <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </li>
+        <li>
+            <audio controls>
+                <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+                Your browser does not support the audio element.
+            </audio>
+        </li>
+    </ol>
 
-<ol>
-  <li>
-    Image: <img src="https://picsum.photos/id/123/200/300" alt="Random image from Pexels">
-  </li>
-  <li>
-    Video: <video controls>
-      <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
-    </video>
-  </li>
-  <li>
-    Audio:   
- <audio controls>
-      <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
-    </audio>
-  </li>
-</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
